[gd_scene load_steps=2 format=2]

[ext_resource path="res://menus/CreateProfile.gd" type="Script" id=1]

[node name="CreateProfile" type="Node" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "custom_constants" ]

[node name="MarginContainer" type="MarginContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 120.0
margin_top = 80.0
margin_right = 1160.0
margin_bottom = 880.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
_sections_unfolded = [ "custom_constants" ]

[node name="NameEntry" type="VBoxContainer" parent="MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 120.0
margin_top = 80.0
margin_right = 920.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
custom_constants/separation = 30
alignment = 1
_sections_unfolded = [ "Size Flags", "custom_constants" ]

[node name="Name" type="Label" parent="MarginContainer/NameEntry" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 264.0
margin_right = 800.0
margin_bottom = 278.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Enter your username"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="NameEntry" type="LineEdit" parent="MarginContainer/NameEntry" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 308.0
margin_right = 800.0
margin_bottom = 332.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
align = 1
max_length = 20
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = true
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Caret", "Placeholder" ]

[node name="Error" type="Label" parent="MarginContainer/NameEntry" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 362.0
margin_right = 800.0
margin_bottom = 376.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="text_changed" from="MarginContainer/NameEntry/NameEntry" to="." method="_on_LineEdit_text_changed"]

[connection signal="text_entered" from="MarginContainer/NameEntry/NameEntry" to="." method="_on_LineEdit_text_entered"]


